# Mix-paradigms

./: .env.example  .pre-commit-config.yaml  README.md  compose.yaml  knowledge_base_400.csv  requirements.txt
Backend/DjBackend/: manage.py
Backend/DjBackend/AiBackend/: apps.py  views.py
Backend/DjBackend/AiBackend/Helpers/: agent.py  csv_tool.py  models.py
Backend/DjBackend/DjBackend/: asgi.py  settings.py  urls.py  wsgi.py
Backend/DjBackend/prolog/: generate_knowledge_bank.py  knowledge_base.pl  tests.pl  tests.py
Front/paradigms/: .env.example  app.json  package-lock.json  package.json
Front/paradigms/app/: index.tsx  results.tsx
Front/paradigms/constants/: courses.ts  csv_Data.ts
Front/paradigms/services/: api.ts
Front/paradigms/types/: index.ts
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/ai/: urls.py  views.py
backend/api/: schemas.py  tests.py  urls.py  views.py
backend/api/ai/: __init__.py  agent.py  models.py  schemas.py  tools.py
backend/api/ai/tools/: get_available_courses.py
backend/api/prolog/: Queries.pl  model.py  models.py  quaries.py  queries.pl  queries.py  schemas.py  tests.py
backend/core/: settings.py  urls.py
backend/data/: knowledge_base.csv  knowledge_base.pl
backend/prolog/: apps.py  csv_to_pl.py  quaries.py  urls.py  views.py
backend/scripts/: convert_csv_to_pl.py  generate_knowledge_base.py
frontend/: app.json  package-lock.json  package.json
frontend/app/components/wizard/: Desired.tsx  TakenCourses.tsx
frontend/constants/: csv_Data.ts
(+7 files in other folders)
